--- a/Shirt Tracker Sync.app/Contents/Info.plist
+++ b/Shirt Tracker Sync.app/Contents/Info.plist
@@ -12,6 +12,8 @@
 	<string>applet</string>
 	<key>CFBundleIconName</key>
 	<string>applet</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.apple.ScriptEditor.id.8E74ABE2-EDF0-40B0-8299-8B72397C7022</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -51,5 +53,24 @@
 	<string>This script needs access to administer this system to run.</string>
 	<key>OSAAppletShowStartupScreen</key>
 	<false/>
+	<key>WindowState</key>
+	<dict>
+		<key>bundleDividerCollapsed</key>
+		<true/>
+		<key>bundlePositionOfDivider</key>
+		<real>0.0</real>
+		<key>dividerCollapsed</key>
+		<false/>
+		<key>eventLogLevel</key>
+		<integer>2</integer>
+		<key>name</key>
+		<string>ScriptWindowState</string>
+		<key>positionOfDivider</key>
+		<real>430</real>
+		<key>savedFrame</key>
+		<string>20 264 700 682 0 0 1512 949 </string>
+		<key>selectedTab</key>
+		<string>result</string>
+	</dict>
 </dict>
 </plist>
